[gd_scene load_steps=9 format=3 uid="uid://7qv4shflvs2a"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_xluuh"]
[ext_resource type="Texture2D" uid="uid://dekfxaakmalym" path="res://Assets/brackeys_platformer_assets/sprites/slime_green.png" id="2_5gdli"]

[sub_resource type="AtlasTexture" id="AtlasTexture_manw5"]
atlas = ExtResource("2_5gdli")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dvlu"]
atlas = ExtResource("2_5gdli")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q02gf"]
atlas = ExtResource("2_5gdli")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqi8i"]
atlas = ExtResource("2_5gdli")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_47h3i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_manw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dvlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q02gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqi8i")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n86hn"]
size = Vector2(12, 13)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_xluuh")

[node name="Animate" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_47h3i")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.900688

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_n86hn")

[node name="RayCastRight" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 6)
target_position = Vector2(9, 0)
collision_mask = 2

[node name="RayCastLeft" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(3, 6)
target_position = Vector2(-12, 0)
collision_mask = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
